--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -80,16 +80,11 @@
           <div id="infob">
             <h3>Available Teams:</h3>
             <% if !current_season.nil? %>
-              <% if @teams.empty? %>
+              <% if current_season.teams.where(season_id: current_season.id).empty? %>
                 <%= ("<p>No teams available.</p>").html_safe %>
               <% else %>
-                <% @teams.each do |t| %>
-                  <% if !current_season.teams.include?(t) #is not already in the season%>
-                    <%= form_for [@current_account, t], remote: true do |f| %>
-                      <%= f.hidden_field :season_id, value: current_season.id %>
-                      <%= f.submit t.name, id: 'team-button', class: "button-main info-button", title: "Add to season" %>
-                    <% end %>
-                  <% end %>
+                <% current_season.teams.where(season_id: current_season.id).each do |t| %>
+        
                 <% end %>
                 <br>
               <% end %>
