--- a/app/views/teams/details.js.erb
+++ b/app/views/teams/details.js.erb
@@ -29,11 +29,11 @@ $("#team-info").append("<h3>Team Members: <span class='button-main standard-butt
   <% end %> \
   </div> \
 <% end %>");
-$("#team-info").append("<h3>Participating in Season:</h3>");
+$("#team-info").append("<h3>Participating in Season(s):</h3>");
 
-$("#team-info").append("<% if !@season == '0' %>\
-<%= @season.each do |s| %>
-<%= j content_tag(:div, s.title, class:'button-main info-button', style:'float:left;') %> \
+$("#team-info").append("<% if !@season.blank? %> \
+<% @season.each do |s| %> \
+<%= j link_to s.title, '/teams/unlink_from_season/'+@team.id.to_s, remote: true, class: 'button-main info-button' %> \
 <% end %><% else %> \
 <%= j content_tag(:p, 'Not in any season.') %> \
 <% end %>");
