--- a/app/views/teams/destroy.js.erb
+++ b/app/views/teams/destroy.js.erb
@@ -1,4 +1,4 @@
-$("body").prepend("<div id='success'><%= @team_name %> deleted.</div>");
+$("body").prepend("<%= j content_tag(:div, 'Team deleted.', id: 'success') %>");
 var check = "<%= @season %>";
 if (check.length){
   retrieveSeasonTeams(check);//refresh teams in season
