--- a/app/views/teams/update.js.erb
+++ b/app/views/teams/update.js.erb
@@ -1,5 +1,5 @@
 //show flash message
-$("body").prepend('<%= escape_javascript("<div id='success'>Team updated.</div>").html_safe %>');
+$("body").prepend("<%= j content_tag(:div, 'Team updated.', id: 'success') %>");
 //reload teams in season
 var selection = $("#s-season").find(":selected").text();
 retrieveSeasonTeams(selection)
